--- a/options/test/EDVR/YTB2-vis-finetune.yml
+++ b/options/test/EDVR/YTB2-vis-finetune.yml
@@ -1,4 +1,4 @@
-name: EDVR_M_x4_SR_REDS_official
+name: test_finetune_vis-new
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -8,9 +8,9 @@ datasets:
   test:
     name: REDS4
     type: VideoTestDataset
-    dataroot_gt: datasets/YTB/GT
-    dataroot_lq: datasets/YTB/LR
-    meta_info_file: basicsr/data/meta_info/vis.txt
+    dataroot_gt: datasets/YTB-2/GT
+    dataroot_lq: datasets/YTB-2/LR
+    meta_info_file: basicsr/data/meta_info/YTB2-vis.txt
     io_backend:
       type: disk
 
@@ -23,11 +23,11 @@ network_g:
   type: EDVR
   num_in_ch: 3
   num_out_ch: 3
-  num_feat: 64
+  num_feat: 128
   num_frame: 7
   deformable_groups: 8
   num_extract_block: 5
-  num_reconstruct_block: 10
+  num_reconstruct_block: 40
   center_frame_idx: ~
   hr_in: false
   with_predeblur: false
@@ -35,7 +35,7 @@ network_g:
 
 # path
 path:
-  pretrain_model_g: experiments/920_EDVR_M_x4_SR_REDS_600k_B4G8_valYTB_101pretrain_wandb/models/net_g_15000.pth
+  pretrain_model_g: experiments/YTB-2-train-pre/models/net_g_65000.pth
   strict_load: true
 
 # validation settings
