--- a/options/test/EDVR/YTB2-vis-v1.yml
+++ b/options/test/EDVR/YTB2-vis-v1.yml
@@ -1,16 +1,16 @@
-name: EDVR_M_x4_SR_REDS_official
+name: YTB-vis-train-v1
 model_type: EDVRModel
 scale: 4
-num_gpu: 1  # set num_gpu: 0 for cpu mode
+num_gpu: 8  # set num_gpu: 0 for cpu mode
 manual_seed: 0
 
 datasets:
   test:
     name: REDS4
     type: VideoTestDataset
-    dataroot_gt: datasets/YTB/GT
-    dataroot_lq: datasets/YTB/LR
-    meta_info_file: basicsr/data/meta_info/vis.txt
+    dataroot_gt: datasets/YTB-2/GT
+    dataroot_lq: datasets/YTB-2/LR
+    meta_info_file: basicsr/data/meta_info/YTB2-vis.txt
     io_backend:
       type: disk
 
@@ -23,11 +23,11 @@ network_g:
   type: EDVR
   num_in_ch: 3
   num_out_ch: 3
-  num_feat: 64
+  num_feat: 128
   num_frame: 7
   deformable_groups: 8
   num_extract_block: 5
-  num_reconstruct_block: 10
+  num_reconstruct_block: 40
   center_frame_idx: ~
   hr_in: false
   with_predeblur: false
@@ -35,12 +35,12 @@ network_g:
 
 # path
 path:
-  pretrain_model_g: experiments/920_EDVR_M_x4_SR_REDS_600k_B4G8_valYTB_101pretrain_wandb/models/net_g_15000.pth
+  pretrain_model_g: experiments/train_1/models/net_g_45000.pth
   strict_load: true
 
 # validation settings
 val:
-  save_img: true
+  save_img: True
   suffix: ~  # add suffix to saved images, if None, use exp name
 
   metrics:
