--- a/options/test/EDVR/test_3d.yml
+++ b/options/test/EDVR/test_3d.yml
@@ -1,4 +1,4 @@
-name: EDVR_M_x4_SR_REDS_official
+name: a_test_c_50000
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -7,10 +7,10 @@ manual_seed: 0
 datasets:
   test:
     name: REDS4
-    type: VideoTestDataset
-    dataroot_gt: datasets/YTB/GT
-    dataroot_lq: datasets/YTB/LR
-    meta_info_file: basicsr/data/meta_info/vis.txt
+    type: VideoTestVimeo90KDataset
+    dataroot_gt: datasets/YTB-2/GT
+    dataroot_lq: datasets/3d
+    meta_info_file: basicsr/data/meta_info/3d_test.txt
     io_backend:
       type: disk
 
@@ -23,24 +23,27 @@ network_g:
   type: EDVR
   num_in_ch: 3
   num_out_ch: 3
-  num_feat: 64
+  num_feat: 128
   num_frame: 7
   deformable_groups: 8
   num_extract_block: 5
-  num_reconstruct_block: 10
+  num_reconstruct_block: 40
   center_frame_idx: ~
   hr_in: false
   with_predeblur: false
-  with_tsa: true
-
+  with_tsa: false
+  
 # path
 path:
-  pretrain_model_g: experiments/920_EDVR_M_x4_SR_REDS_600k_B4G8_valYTB_101pretrain_wandb/models/net_g_15000.pth
+  pretrain_model_g: experiments/train_3d_160_out/models/net_g_50000.pth
   strict_load: true
-
+# experiments/train_3d/models/net_g_280000.pth
+# experiments/train_3d/models/net_g_150000.pth
+# experiments/train_3d_160/models/net_g_80000.pth    将160大小图片加在upsample层后
+# experiments/train_3d_160_out/models/net_g_140000.pth    将160大小图片加在concat
 # validation settings
 val:
-  save_img: true
+  save_img: False
   suffix: ~  # add suffix to saved images, if None, use exp name
 
   metrics:
