--- a/options/test/EDVR/test_L-.yml
+++ b/options/test/EDVR/test_L-.yml
@@ -1,7 +1,7 @@
-name: EDVR_M_x4_SR_REDS_official
+name: large_vis
 model_type: EDVRModel
 scale: 4
-num_gpu: 1  # set num_gpu: 0 for cpu mode
+num_gpu: 8  # set num_gpu: 0 for cpu mode
 manual_seed: 0
 
 datasets:
@@ -23,11 +23,11 @@ network_g:
   type: EDVR
   num_in_ch: 3
   num_out_ch: 3
-  num_feat: 64
+  num_feat: 128
   num_frame: 7
   deformable_groups: 8
   num_extract_block: 5
-  num_reconstruct_block: 10
+  num_reconstruct_block: 40
   center_frame_idx: ~
   hr_in: false
   with_predeblur: false
@@ -35,12 +35,12 @@ network_g:
 
 # path
 path:
-  pretrain_model_g: experiments/920_EDVR_M_x4_SR_REDS_600k_B4G8_valYTB_101pretrain_wandb/models/net_g_15000.pth
+  pretrain_model_g: experiments/pretrained_models/EDVR_L_x4_SR_Vimeo90K_official-162b54e4.pth
   strict_load: true
 
 # validation settings
 val:
-  save_img: true
+  save_img: True
   suffix: ~  # add suffix to saved images, if None, use exp name
 
   metrics:
