--- a/options/train/EDVR/train_160.yml
+++ b/options/train/EDVR/train_160.yml
@@ -1,5 +1,5 @@
 # general settings
-name: train_320_16
+name: train_upsample_offset_5_without_mask
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -10,16 +10,16 @@ datasets:
   train:
     name: VOX
     type: Vimeo90KDataset
-    dataroot_gt: /data2/wei/vox-320/GT
-    dataroot_lq: /data2/wei/vox-320/LR
+    dataroot_gt: /data2/wei/vox-160/GT
+    dataroot_lq: /data2/wei/vox-160/LR
     dataroot_flow: ~
-    meta_info_file: basicsr/data/meta_info/vox_320_train.txt  #############dododo
+    meta_info_file: basicsr/data/meta_info/train_160.txt  #############dododo
     val_partition: Vimeo90KDateset # set to 'official' when use the official validation partition
     io_backend:
       type: disk
 
     num_frame: 7
-    gt_size: 320
+    gt_size: 160
     interval_list: [1]
     random_reverse: false
     use_flip: true
@@ -27,17 +27,17 @@ datasets:
 
     # data loader
     use_shuffle: true
-    num_worker_per_gpu: 16
-    batch_size_per_gpu: 4
+    num_worker_per_gpu: 8
+    batch_size_per_gpu: 2
     dataset_enlarge_ratio: 200
     prefetch_mode: ~
 
   val:
     name: VOX
     type: VideoTestVimeo90KDataset
-    dataroot_gt: /data2/wei/vox-320/GT
-    dataroot_lq: /data2/wei/vox-320/LR
-    meta_info_file: basicsr/data/meta_info/vox_320_test.txt  ##########dododo
+    dataroot_gt: /data2/wei/vox-160/GT
+    dataroot_lq: /data2/wei/vox-160/LR
+    meta_info_file: basicsr/data/meta_info/test_160.txt  ##########dododo
     # change to 'meta_info_REDSofficial4_test_GT' when use the official validation partition
     io_backend:
       type: disk
