--- a/options/train/EDVR/train_2d.yml
+++ b/options/train/EDVR/train_2d.yml
@@ -1,25 +1,25 @@
 # general settings
-name: train_320_16
+name: train_3d_160_out
 model_type: EDVRModel
 scale: 4
-num_gpu: 1  # set num_gpu: 0 for cpu mode
+num_gpu: 2  # set num_gpu: 0 for cpu mode
 manual_seed: 10
 
 # dataset and data loader settings
 datasets:
   train:
-    name: VOX
+    name: YTB
     type: Vimeo90KDataset
-    dataroot_gt: /data2/wei/vox-320/GT
-    dataroot_lq: /data2/wei/vox-320/LR
+    dataroot_gt: datasets/YTB-2/GT
+    dataroot_lq: datasets/3d
     dataroot_flow: ~
-    meta_info_file: basicsr/data/meta_info/vox_320_train.txt  #############dododo
+    meta_info_file: basicsr/data/meta_info/3d_train.txt
     val_partition: Vimeo90KDateset # set to 'official' when use the official validation partition
     io_backend:
       type: disk
 
     num_frame: 7
-    gt_size: 320
+    gt_size: 160
     interval_list: [1]
     random_reverse: false
     use_flip: true
@@ -27,17 +27,17 @@ datasets:
 
     # data loader
     use_shuffle: true
-    num_worker_per_gpu: 16
-    batch_size_per_gpu: 4
+    num_worker_per_gpu: 3
+    batch_size_per_gpu: 16
     dataset_enlarge_ratio: 200
     prefetch_mode: ~
 
   val:
-    name: VOX
+    name: YTB
     type: VideoTestVimeo90KDataset
-    dataroot_gt: /data2/wei/vox-320/GT
-    dataroot_lq: /data2/wei/vox-320/LR
-    meta_info_file: basicsr/data/meta_info/vox_320_test.txt  ##########dododo
+    dataroot_gt: datasets/YTB-2/GT
+    dataroot_lq: datasets/3d
+    meta_info_file: basicsr/data/meta_info/3d_val.txt
     # change to 'meta_info_REDSofficial4_test_GT' when use the official validation partition
     io_backend:
       type: disk
@@ -47,33 +47,25 @@ datasets:
     padding: reflection_circle
 
 
-# network structures
-# network_g:
-#   type: EDVR
-#   num_in_ch: 3
-#   num_out_ch: 3
-#   num_feat: 128
-#   num_frame: 7
-#   deformable_groups: 8
-#   num_extract_block: 5
-#   num_reconstruct_block: 40
-#   center_frame_idx: ~
-#   hr_in: false
-#   with_predeblur: false
-#   with_tsa: false
+#network structures
 network_g:
   type: EDVR
   num_in_ch: 3
   num_out_ch: 3
-  num_feat: 64
+  num_feat: 128
   num_frame: 7
   deformable_groups: 8
   num_extract_block: 5
-  num_reconstruct_block: 10
+  num_reconstruct_block: 40
   center_frame_idx: ~
   hr_in: false
   with_predeblur: false
   with_tsa: false
+
+
+
+
+
 # path
 path:
   pretrain_model_g: ~
@@ -94,7 +86,7 @@ train:
     restart_weights: [1, 0.5, 0.5, 0.5, 0.5]
     eta_min: !!float 1e-7
 
-  total_iter: 600000
+  total_iter: 200000
   warmup_iter: -1  # no warm up
   tsa_iter: 1
   dcn_lr_mul: 1
@@ -108,7 +100,7 @@ train:
   # losses
   offset_opt:
     type: OffsetLoss
-    loss_weight: 100.0
+    loss_weight: 1.0
     
 # validation settings
 val:
