--- a/options/train/EDVR/train_EDVR_M_x4_SR_REDS.yml
+++ b/options/train/EDVR/train_EDVR_M_x4_SR_REDS.yml
@@ -1,25 +1,25 @@
 # general settings
-name: 102_EDVR_M_x4_SR_REDS_600k_B4G8_valREDS4_101pretrain_wandb
+name: 920_EDVR_M_x4_SR_REDS_600k_B4G8_valYTB_101pretrain_wandb
 model_type: EDVRModel
 scale: 4
-num_gpu: 8  # set num_gpu: 0 for cpu mode
+num_gpu: 2  # set num_gpu: 0 for cpu mode
 manual_seed: 10
 
 # dataset and data loader settings
 datasets:
   train:
-    name: REDS
-    type: REDSDataset
-    dataroot_gt: datasets/REDS/train_sharp
-    dataroot_lq: datasets/REDS/train_sharp_bicubic
+    name: YTB
+    type: Vimeo90KDataset
+    dataroot_gt: datasets/YTB/GT
+    dataroot_lq: datasets/YTB/LR
     dataroot_flow: ~
-    meta_info_file: basicsr/data/meta_info/meta_info_REDS_GT.txt
-    val_partition: REDS4  # set to 'official' when use the official validation partition
+    meta_info_file: basicsr/data/meta_info/YTB_train_GT.txt
+    val_partition: Vimeo90KDateset  # set to 'official' when use the official validation partition
     io_backend:
       type: disk
 
-    num_frame: 5
-    gt_size: 256
+    num_frame: 7
+    gt_size: 160
     interval_list: [1]
     random_reverse: false
     use_flip: true
@@ -28,22 +28,22 @@ datasets:
     # data loader
     use_shuffle: true
     num_worker_per_gpu: 3
-    batch_size_per_gpu: 4
+    batch_size_per_gpu: 64
     dataset_enlarge_ratio: 200
     prefetch_mode: ~
 
   val:
-    name: REDS4
-    type: VideoTestDataset
-    dataroot_gt: datasets/REDS/train_sharp
-    dataroot_lq: datasets/REDS/train_sharp_bicubic
-    meta_info_file: basicsr/data/meta_info/meta_info_REDS4_test_GT.txt
+    name: YTB
+    type: VideoTestVimeo90KDataset
+    dataroot_gt: datasets/YTB/GT
+    dataroot_lq: datasets/YTB/LR
+    meta_info_file: basicsr/data/meta_info/YTB_test_GT.txt
     # change to 'meta_info_REDSofficial4_test_GT' when use the official validation partition
     io_backend:
       type: disk
 
     cache_data: false
-    num_frame: 5
+    num_frame: 7
     padding: reflection_circle
 
 # network structures
@@ -52,7 +52,7 @@ network_g:
   num_in_ch: 3
   num_out_ch: 3
   num_feat: 64
-  num_frame: 5
+  num_frame: 7
   deformable_groups: 8
   num_extract_block: 5
   num_reconstruct_block: 10
@@ -63,7 +63,7 @@ network_g:
 
 # path
 path:
-  pretrain_model_g: experiments/101_EDVR_M_x4_SR_REDS_woTSA_600k_B4G8_valREDS4_wandb/models/net_g_600000.pth
+  pretrain_model_g: ~
   strict_load: false
   resume_state: ~
 
