--- a/options/train/EDVR/train_EDVR_M_x4_SR_REDS_save.yml
+++ b/options/train/EDVR/train_EDVR_M_x4_SR_REDS_save.yml
@@ -1,25 +1,25 @@
 # general settings
-name: train_320_16
+name: 102_EDVR_M_x4_SR_REDS_600k_B4G8_valREDS4_101pretrain_wandb
 model_type: EDVRModel
 scale: 4
-num_gpu: 1  # set num_gpu: 0 for cpu mode
+num_gpu: 8  # set num_gpu: 0 for cpu mode
 manual_seed: 10
 
 # dataset and data loader settings
 datasets:
   train:
-    name: VOX
-    type: Vimeo90KDataset
-    dataroot_gt: /data2/wei/vox-320/GT
-    dataroot_lq: /data2/wei/vox-320/LR
+    name: REDS
+    type: REDSDataset
+    dataroot_gt: datasets/REDS/train_sharp
+    dataroot_lq: datasets/REDS/train_sharp_bicubic
     dataroot_flow: ~
-    meta_info_file: basicsr/data/meta_info/vox_320_train.txt  #############dododo
-    val_partition: Vimeo90KDateset # set to 'official' when use the official validation partition
+    meta_info_file: basicsr/data/meta_info/meta_info_REDS_GT.txt
+    val_partition: REDS4  # set to 'official' when use the official validation partition
     io_backend:
       type: disk
 
-    num_frame: 7
-    gt_size: 320
+    num_frame: 5
+    gt_size: 256
     interval_list: [1]
     random_reverse: false
     use_flip: true
@@ -27,56 +27,43 @@ datasets:
 
     # data loader
     use_shuffle: true
-    num_worker_per_gpu: 16
+    num_worker_per_gpu: 3
     batch_size_per_gpu: 4
     dataset_enlarge_ratio: 200
     prefetch_mode: ~
 
   val:
-    name: VOX
-    type: VideoTestVimeo90KDataset
-    dataroot_gt: /data2/wei/vox-320/GT
-    dataroot_lq: /data2/wei/vox-320/LR
-    meta_info_file: basicsr/data/meta_info/vox_320_test.txt  ##########dododo
+    name: REDS4
+    type: VideoTestDataset
+    dataroot_gt: datasets/REDS/train_sharp
+    dataroot_lq: datasets/REDS/train_sharp_bicubic
+    meta_info_file: basicsr/data/meta_info/meta_info_REDS4_test_GT.txt
     # change to 'meta_info_REDSofficial4_test_GT' when use the official validation partition
     io_backend:
       type: disk
 
     cache_data: false
-    num_frame: 7
+    num_frame: 5
     padding: reflection_circle
 
-
 # network structures
-# network_g:
-#   type: EDVR
-#   num_in_ch: 3
-#   num_out_ch: 3
-#   num_feat: 128
-#   num_frame: 7
-#   deformable_groups: 8
-#   num_extract_block: 5
-#   num_reconstruct_block: 40
-#   center_frame_idx: ~
-#   hr_in: false
-#   with_predeblur: false
-#   with_tsa: false
 network_g:
   type: EDVR
   num_in_ch: 3
   num_out_ch: 3
   num_feat: 64
-  num_frame: 7
+  num_frame: 5
   deformable_groups: 8
   num_extract_block: 5
   num_reconstruct_block: 10
   center_frame_idx: ~
   hr_in: false
   with_predeblur: false
-  with_tsa: false
+  with_tsa: true
+
 # path
 path:
-  pretrain_model_g: ~
+  pretrain_model_g: experiments/101_EDVR_M_x4_SR_REDS_woTSA_600k_B4G8_valREDS4_wandb/models/net_g_600000.pth
   strict_load: false
   resume_state: ~
 
@@ -91,12 +78,12 @@ train:
   scheduler:
     type: CosineAnnealingRestartLR
     periods: [50000, 100000, 150000, 150000, 150000]
-    restart_weights: [1, 0.5, 0.5, 0.5, 0.5]
+    restart_weights: [1, 1, 1, 1, 1]
     eta_min: !!float 1e-7
 
   total_iter: 600000
   warmup_iter: -1  # no warm up
-  tsa_iter: 1
+  tsa_iter: 50000
   dcn_lr_mul: 1
 
   # losses
@@ -105,11 +92,6 @@ train:
     loss_weight: 1.0
     reduction: sum
 
-  # losses
-  offset_opt:
-    type: OffsetLoss
-    loss_weight: 100.0
-    
 # validation settings
 val:
   val_freq: !!float 5e3
