--- a/options/train/EDVR/train_L_YTB2.yml
+++ b/options/train/EDVR/train_L_YTB2.yml
@@ -1,25 +1,25 @@
 # general settings
-name: 104_EDVR_L_x4_SR_REDS_600k_B4G8_valREDS4_103pretrain_wandb
+name: YTB-2-train-pre
 model_type: EDVRModel
 scale: 4
-num_gpu: 8  # set num_gpu: 0 for cpu mode
+num_gpu: 2  # set num_gpu: 0 for cpu mode
 manual_seed: 10
 
 # dataset and data loader settings
 datasets:
   train:
-    name: REDS
-    type: REDSDataset
-    dataroot_gt: datasets/REDS/train_sharp
-    dataroot_lq: datasets/REDS/train_sharp_bicubic
+    name: YTB-2
+    type: Vimeo90KDataset
+    dataroot_gt: datasets/YTB-2/GT
+    dataroot_lq: datasets/YTB-2/LR
     dataroot_flow: ~
-    meta_info_file: basicsr/data/meta_info/meta_info_REDS_GT.txt
-    val_partition: REDS4  # set to 'official' when use the official validation partition
+    meta_info_file: basicsr/data/meta_info/YTB-2_train.txt
+    val_partition: Vimeo90KDateset # set to 'official' when use the official validation partition
     io_backend:
       type: disk
 
-    num_frame: 5
-    gt_size: 256
+    num_frame: 7
+    gt_size: 160
     interval_list: [1]
     random_reverse: false
     use_flip: true
@@ -28,23 +28,24 @@ datasets:
     # data loader
     use_shuffle: true
     num_worker_per_gpu: 3
-    batch_size_per_gpu: 4
+    batch_size_per_gpu: 8
     dataset_enlarge_ratio: 200
     prefetch_mode: ~
 
   val:
-    name: REDS4
-    type: VideoTestDataset
-    dataroot_gt: datasets/REDS/train_sharp
-    dataroot_lq: datasets/REDS/train_sharp_bicubic
-    meta_info_file: basicsr/data/meta_info/meta_info_REDS4_test_GT.txt
+    name: YTB-2
+    type: VideoTestVimeo90KDataset
+    dataroot_gt: datasets/YTB-2/GT
+    dataroot_lq: datasets/YTB-2/LR
+    meta_info_file: basicsr/data/meta_info/YTB-2_test.txt
     # change to 'meta_info_REDSofficial4_test_GT' when use the official validation partition
     io_backend:
       type: disk
 
     cache_data: false
-    num_frame: 5
+    num_frame: 7
     padding: reflection_circle
+
 
 # network structures
 network_g:
@@ -52,18 +53,18 @@ network_g:
   num_in_ch: 3
   num_out_ch: 3
   num_feat: 128
-  num_frame: 5
+  num_frame: 7
   deformable_groups: 8
   num_extract_block: 5
   num_reconstruct_block: 40
   center_frame_idx: ~
   hr_in: false
   with_predeblur: false
-  with_tsa: true
+  with_tsa: false
 
 # path
 path:
-  pretrain_model_g: experiments/103_EDVR_L_x4_SR_REDS_woTSA_600k_B4G8_valREDS4_wandb/models/net_g_600000.pth
+  pretrain_model_g: experiments/pretrained_models/EDVR_L_x4_SR_Vimeo90K_official-162b54e4.pth
   strict_load: false
   resume_state: ~
 
@@ -83,7 +84,7 @@ train:
 
   total_iter: 600000
   warmup_iter: -1  # no warm up
-  tsa_iter: 50000
+  tsa_iter: 1
   dcn_lr_mul: 1
 
   # losses
@@ -91,7 +92,13 @@ train:
     type: CharbonnierLoss
     loss_weight: 1.0
     reduction: sum
-
+    
+  # losses
+  offset_opt:
+    type: OffsetLoss
+    loss_weight: 1.0
+    reduction: mean
+    
 # validation settings
 val:
   val_freq: !!float 5e3
