--- a/options/train/EDVR/train_160.yml
+++ b/options/train/EDVR/train_160.yml
@@ -1,5 +1,5 @@
 # general settings
-name: train_upsample_last_offset
+name: train_upsample_baseline
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -76,9 +76,9 @@ network_g:
   with_tsa: false
 # path
 path:
-  pretrain_model_g: ~
+  pretrain_model_g: experiments/train_upsample_baseline/models/net_g_80000.pth
   strict_load: false
-  resume_state: ~
+  resume_state: experiments/train_upsample_baseline/training_states/80000.state
 
 # training settings
 train:
