--- a/options/test/EDVR/test_160.yml
+++ b/options/test/EDVR/test_160.yml
@@ -1,4 +1,4 @@
-name: test_160_vis
+name: test_160_vis_1
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -16,7 +16,7 @@ datasets:
     #meta_info_file: basicsr/data/meta_info/vis_flow.txt
     #meta_info_file: /home/wei/exp/data_process/best_ijb.txt
     
-    meta_info_file: basicsr/data/meta_info/vis_flow.txt
+    meta_info_file: basicsr/data/meta_info/test_160.txt
     io_backend:
       type: disk
 
@@ -44,7 +44,7 @@ path:
   #pretrain_model_g: experiments/train_320_wo_off/models/net_g_175000.pth
   #pretrain_model_g: experiments/train_320_w_off_100/models/net_g_195000.pth
   #pretrain_model_g: experiments/train_320_w_off/models/net_g_110000.pth
-  pretrain_model_g: experiments/train_upsample_weight/models/net_g_20000.pth
+  pretrain_model_g: experiments/train_upsample_first_offset/models/net_g_450000.pth
   strict_load: true
 # experiments/train_3d/models/net_g_280000.pth
 # experiments/train_3d/models/net_g_150000.pth
@@ -52,7 +52,7 @@ path:
 # experiments/train_3d_160_out/models/net_g_140000.pth    将160大小图片加在concat
 # validation settings
 val:
-  save_img: true
+  save_img: false
   suffix: ~  # add suffix to saved images, if None, use exp name
 
   metrics:
