--- a/options/train/EDVR/train_160.yml
+++ b/options/train/EDVR/train_160.yml
@@ -1,5 +1,5 @@
 # general settings
-name: train_upsample_baseline
+name: train_upsample_gt
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -28,7 +28,7 @@ datasets:
     # data loader
     use_shuffle: true
     num_worker_per_gpu: 8
-    batch_size_per_gpu: 2
+    batch_size_per_gpu: 1
     dataset_enlarge_ratio: 200
     prefetch_mode: ~
 
@@ -76,9 +76,9 @@ network_g:
   with_tsa: false
 # path
 path:
-  pretrain_model_g: experiments/train_upsample_baseline/models/net_g_80000.pth
+  pretrain_model_g: ~
   strict_load: false
-  resume_state: experiments/train_upsample_baseline/training_states/80000.state
+  resume_state: ~
 
 # training settings
 train:
