--- a/options/train/EDVR/train_160.yml
+++ b/options/train/EDVR/train_160.yml
@@ -1,5 +1,5 @@
 # general settings
-name: train_upsample_gt
+name: train_ori_offset
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -28,7 +28,7 @@ datasets:
     # data loader
     use_shuffle: true
     num_worker_per_gpu: 8
-    batch_size_per_gpu: 1
+    batch_size_per_gpu: 2
     dataset_enlarge_ratio: 200
     prefetch_mode: ~
 
@@ -94,7 +94,7 @@ train:
     restart_weights: [1, 0.5, 0.5, 0.5, 0.5]
     eta_min: !!float 1e-7
 
-  total_iter: 600000
+  total_iter: 1000000
   warmup_iter: -1  # no warm up
   tsa_iter: 1
   dcn_lr_mul: 1
