--- a/options/train/EDVR/train_160.yml
+++ b/options/train/EDVR/train_160.yml
@@ -1,5 +1,5 @@
 # general settings
-name: train_ori_offset
+name: train_ori_shuffle
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -76,9 +76,9 @@ network_g:
   with_tsa: false
 # path
 path:
-  pretrain_model_g: experiments/train_ori_offset/models/net_g_400000
+  pretrain_model_g: ~
   strict_load: false
-  resume_state: experiments/train_ori_offset/training_states/400000.state
+  resume_state: ~
 
 # training settings
 train:
