--- a/options/train/EDVR/train_160.yml
+++ b/options/train/EDVR/train_160.yml
@@ -1,5 +1,5 @@
 # general settings
-name: train_ori_shuffle
+name: train_ori_shuffle_baseline
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
