--- a/options/test/EDVR/test_160_ijb.yml
+++ b/options/test/EDVR/test_160_ijb.yml
@@ -1,4 +1,4 @@
-name: test_160_ijb_angel
+name: test_160_ijb_max_score_60w
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -11,7 +11,7 @@ datasets:
     type: VideoTestVimeo90KDataset
     dataroot_gt: /data2/wei/IJB-160/GT
     #dataroot_lq: /data2/wei/vox-7-same/LR
-    dataroot_lq: /data2/wei/IJB-160/LR_save
+    dataroot_lq: /data2/wei/IJB-160/LR
     #meta_info_file: basicsr/data/meta_info/vox_320_test.txt
     #meta_info_file: basicsr/data/meta_info/vis_flow.txt
     #meta_info_file: /home/wei/exp/data_process/best_ijb.txt
@@ -44,7 +44,7 @@ path:
   #pretrain_model_g: experiments/train_320_wo_off/models/net_g_175000.pth
   #pretrain_model_g: experiments/train_320_w_off_100/models/net_g_195000.pth
   #pretrain_model_g: experiments/train_320_w_off/models/net_g_110000.pth
-  pretrain_model_g: experiments/train_ori_shuffle/models/net_g_140000.pth
+  pretrain_model_g: experiments/train_ori_shuffle/models/net_g_600000.pth
   strict_load: true
 # experiments/train_3d/models/net_g_280000.pth
 # experiments/train_3d/models/net_g_150000.pth
