--- a/options/train/EDVR/test.yml
+++ b/options/train/EDVR/test.yml
@@ -1,5 +1,4 @@
-# general settings
-name: test
+name: id_loss_1
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -10,10 +9,10 @@ datasets:
   train:
     name: VOX
     type: Vimeo90KDataset
-    dataroot_gt: /data2/wei/vox-160-clean/GT
-    dataroot_lq: /data2/wei/vox-160-clean/LR
+    dataroot_gt: /data2/wei/vox-160/GT
+    dataroot_lq: /data2/wei/vox-160/LR
     dataroot_flow: ~
-    meta_info_file: basicsr/data/meta_info/vox_ijb_train.txt  #############dododo
+    meta_info_file: basicsr/data/meta_info/train_160.txt  #############dododo
     val_partition: Vimeo90KDateset # set to 'official' when use the official validation partition
     io_backend:
       type: disk
@@ -35,9 +34,9 @@ datasets:
   val:
     name: VOX
     type: VideoTestVimeo90KDataset
-    dataroot_gt: /data2/wei/vox-160-clean/GT
-    dataroot_lq: /data2/wei/vox-160-clean/LR
-    meta_info_file: basicsr/data/meta_info/vox_ijb_val.txt  ##########dododo
+    dataroot_gt: /data2/wei/vox-160/GT
+    dataroot_lq: /data2/wei/vox-160/LR
+    meta_info_file: basicsr/data/meta_info/test_160.txt  ##########dododo
     # change to 'meta_info_REDSofficial4_test_GT' when use the official validation partition
     io_backend:
       type: disk
@@ -113,7 +112,7 @@ train:
   # losses
   id_opt:
     type: MSELoss
-    loss_weight: 100.0
+    loss_weight: 1.0
 
 # validation settings
 val:
@@ -128,7 +127,7 @@ val:
 
 # logging settings
 logger:
-  print_freq: 100
+  print_freq: 10
   save_checkpoint_freq: !!float 5e3
   use_tb_logger: true
   wandb:
