--- a/options/train/EDVR/train_id_loss.yml
+++ b/options/train/EDVR/train_id_loss.yml
@@ -1,4 +1,4 @@
-name: id_loss_1
+name: train_trans_id_loss
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -21,8 +21,8 @@ datasets:
     gt_size: 160
     interval_list: [1]
     random_reverse: false
-    use_flip: true
-    use_rot: true
+    use_flip: false
+    use_rot: false
 
     # data loader
     use_shuffle: true
@@ -127,7 +127,7 @@ val:
 
 # logging settings
 logger:
-  print_freq: 10
+  print_freq: 100
   save_checkpoint_freq: !!float 5e3
   use_tb_logger: true
   wandb:
