--- a/options/train/EDVR/train_id_loss.yml
+++ b/options/train/EDVR/train_id_loss.yml
@@ -1,4 +1,4 @@
-name: train_trans_id_loss
+name: train_trans_id_loss_7x7_logexp
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -26,7 +26,7 @@ datasets:
 
     # data loader
     use_shuffle: true
-    num_worker_per_gpu: 8
+    num_worker_per_gpu: 4
     batch_size_per_gpu: 2
     dataset_enlarge_ratio: 200
     prefetch_mode: ~
@@ -89,8 +89,8 @@ train:
 
   scheduler:
     type: CosineAnnealingRestartLR
-    periods: [50000, 100000, 150000, 150000, 150000]
-    restart_weights: [1, 0.5, 0.5, 0.5, 0.5]
+    periods: [1000000]
+    restart_weights: [1]
     eta_min: !!float 1e-7
 
   total_iter: 1000000
@@ -116,7 +116,7 @@ train:
 
 # validation settings
 val:
-  val_freq: !!float 5e3
+  val_freq: !!float 1e5
   save_img: false
 
   metrics:
@@ -128,7 +128,7 @@ val:
 # logging settings
 logger:
   print_freq: 100
-  save_checkpoint_freq: !!float 5e3
+  save_checkpoint_freq: !!float 1e4
   use_tb_logger: true
   wandb:
     project: ~
