--- a/options/test/EDVR/test_160_ijb.yml
+++ b/options/test/EDVR/test_160_ijb.yml
@@ -1,4 +1,4 @@
-name: test_ijb_id_loss
+name: skyline_id_loss_7x7_L1_mse
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -9,9 +9,9 @@ datasets:
   test:
     name: REDS4
     type: VideoTestVimeo90KDataset
-    # dataroot_gt: /data2/wei/IJB-160/GT
-    # dataroot_lq: /data2/wei/IJB-160/LR
-    # meta_info_file: basicsr/data/meta_info/IJB_ori_test.txt
+#     dataroot_gt: /data2/wei/IJB-160/GT
+#     dataroot_lq: /data2/wei/IJB-160/LR
+#     meta_info_file: basicsr/data/meta_info/IJB_ori_test.txt
     dataroot_gt: /data2/wei/vox-160/GT
     dataroot_lq: /data2/wei/vox-160/LR
     meta_info_file: basicsr/data/meta_info/test_160.txt
@@ -42,7 +42,7 @@ path:
   #pretrain_model_g: experiments/train_320_wo_off/models/net_g_175000.pth
   #pretrain_model_g: experiments/train_320_w_off_100/models/net_g_195000.pth
   #pretrain_model_g: experiments/train_320_w_off/models/net_g_110000.pth
-  pretrain_model_g: experiments/id_loss_1/models/net_g_100000.pth
+  pretrain_model_g: experiments/skyline_trans_id_loss_7x7_mse/models/net_g_20000.pth
   strict_load: true
 # experiments/train_3d/models/net_g_280000.pth
 # experiments/train_3d/models/net_g_150000.pth
