--- a/options/train/EDVR/train_id_loss_vox.yml
+++ b/options/train/EDVR/train_id_loss_vox.yml
@@ -1,30 +1,19 @@
 # name: test
-name: skyline_trans_id_loss_7x7_mse_ijb
+name: skyline_trans_id_loss_512_mse_ijb
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 10
 
 # dataset and data loader settings
-# datasets:
-#   train:
-#     name: VOX
-#     type: Vimeo90KDataset
-#     dataroot_gt: /data2/wei/vox-160/GT
-#     dataroot_lq: /data2/wei/vox-160/LR
-#     dataroot_flow: ~
-#     meta_info_file: basicsr/data/meta_info/train_160.txt  #############dododo
-#     val_partition: Vimeo90KDateset # set to 'official' when use the official validation partition
-#     io_backend:
-#       type: disk
 datasets:
   train:
     name: VOX
     type: Vimeo90KDataset
-    dataroot_gt: /data2/wei/vox-160-clean/GT
-    dataroot_lq: /data2/wei/vox-160-clean/LR
+    dataroot_gt: /data2/wei/vox-160/GT
+    dataroot_lq: /data2/wei/vox-160/LR
     dataroot_flow: ~
-    meta_info_file: basicsr/data/meta_info/vox_ijb_train.txt  #############dododo
+    meta_info_file: basicsr/data/meta_info/train_160.txt  #############dododo
     val_partition: Vimeo90KDateset # set to 'official' when use the official validation partition
     io_backend:
       type: disk
@@ -43,22 +32,12 @@ datasets:
     dataset_enlarge_ratio: 200
     prefetch_mode: ~
 
-#   val:
-#     name: VOX
-#     type: VideoTestVimeo90KDataset
-#     dataroot_gt: /data2/wei/vox-160/GT
-#     dataroot_lq: /data2/wei/vox-160/LR
-#     meta_info_file: basicsr/data/meta_info/test_160.txt  ##########dododo
-#     # change to 'meta_info_REDSofficial4_test_GT' when use the official validation partition
-#     io_backend:
-#       type: disk
-
   val:
     name: VOX
     type: VideoTestVimeo90KDataset
-    dataroot_gt: /data2/wei/vox-160-clean/GT
-    dataroot_lq: /data2/wei/vox-160-clean/LR
-    meta_info_file: basicsr/data/meta_info/vox_ijb_test_ijb.txt  ##########dododo
+    dataroot_gt: /data2/wei/vox-160/GT
+    dataroot_lq: /data2/wei/vox-160/LR
+    meta_info_file: basicsr/data/meta_info/test_160.txt  ##########dododo
     # change to 'meta_info_REDSofficial4_test_GT' when use the official validation partition
     io_backend:
       type: disk
@@ -68,7 +47,20 @@ datasets:
     padding: reflection_circle
 
 
-
+# network structures
+# network_g:
+#   type: EDVR
+#   num_in_ch: 3
+#   num_out_ch: 3
+#   num_feat: 128
+#   num_frame: 7
+#   deformable_groups: 8
+#   num_extract_block: 5
+#   num_reconstruct_block: 40
+#   center_frame_idx: ~
+#   hr_in: false
+#   with_predeblur: false
+#   with_tsa: false
 network_g:
   type: EDVR
   num_in_ch: 3
