--- a/options/train/EDVR/train_id_loss.yml
+++ b/options/train/EDVR/train_id_loss.yml
@@ -1,5 +1,5 @@
 # name: test
-name: skyline_trans_id_loss_7x7_mse_lm_1100_ijb_b16
+name: test
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -23,8 +23,9 @@ datasets:
     type: Vimeo90KDataset
     dataroot_gt: /data2/wei/vox-lm/GT
     dataroot_lq: /data2/wei/vox-lm/LR
+    dic_path: fc_weights/dic.npy
     dataroot_flow: ~
-    meta_info_file: basicsr/data/meta_info/vox_1100_ijb_train.txt  #############dododo
+    meta_info_file: basicsr/data/meta_info/vox_1100_train.txt  #############dododo
     val_partition: Vimeo90KDateset # set to 'official' when use the official validation partition
     io_backend:
       type: disk
@@ -165,3 +166,4 @@ dist_params:
   port: 29500
 
 find_unused_parameters: true
+
