--- a/options/train/EDVR/train_id_loss.yml
+++ b/options/train/EDVR/train_id_loss.yml
@@ -1,5 +1,5 @@
 # name: test
-name: skyline_trans_id_loss_7x7_mse_norm_lm_3900_b16_spc_norm
+name: test_pixel_loss
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -122,7 +122,7 @@ train:
   pixel_opt:
     type: CharbonnierLoss
     loss_weight: 1.0
-    reduction: sum
+    reduction: mean
 
   # losses
   offset_opt:
